--- a/static/Main.css
+++ b/static/Main.css
@@ -3,7 +3,8 @@
 body {
   font-family: 'Lato', sans-serif;
   color: #111;
-  font-size: 13px;
+  font-size: 14px;
+  font-weight: 400;
   line-height: 19px;
 }
 
